--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.20",
+    "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -46,7 +49,7 @@
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.5.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
@@ -60,6 +63,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
