--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,9 +49,11 @@
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.454.0",
     "next": "^15.5.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
